[tool.poetry]
name = "karmakrate"
version = "2.0.0"
description = "Utils component for Knew Karma"
authors = ["Richard Mwewa <rly0nheart@duck.com>", "Knew Karma IO <redacted@redacted.com>"]
license = "GPL-3.0+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
